@@ -2,15 +2,15 @@ package com.luisgmr.senai.controller;
 
 import com.luisgmr.senai.dto.request.AccountRequestDTO;
 import com.luisgmr.senai.dto.response.AccountResponseDTO;
+import com.luisgmr.senai.dto.response.PageResponseDTO;
 import com.luisgmr.senai.mapper.AccountMapper;
 import com.luisgmr.senai.service.AccountService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/accounts")
@@ -20,8 +20,18 @@ public class AccountController {
     private final AccountMapper mapper;
 
     @GetMapping
-    public List<AccountResponseDTO> list() {
-        return service.list().stream().map(mapper::toResponse).collect(Collectors.toList());
+    public PageResponseDTO<AccountResponseDTO> list(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "5") int size
+    ) {
+        Pageable pageable = PageRequest.of(page, size);
+        var result = service.list(pageable);
+        return new PageResponseDTO<>(
+                result.getContent().stream().map(mapper::toResponse).toList(),
+                result.getNumber(),
+                result.getTotalPages(),
+                result.getTotalElements()
+        );
     }
 
     @GetMapping("/{id}")
