@@ -1,14 +1,18 @@
 package com.luisgmr.senai.controller;
 
+import com.luisgmr.senai.domain.Transaction;
 import com.luisgmr.senai.dto.request.TransactionRequestDTO;
+import com.luisgmr.senai.dto.response.PageResponseDTO;
 import com.luisgmr.senai.dto.response.TransactionResponseDTO;
 import com.luisgmr.senai.mapper.TransactionMapper;
 import com.luisgmr.senai.service.TransactionService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.web.bind.annotation.*;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/transactions")
@@ -23,7 +27,19 @@ public class TransactionController {
     }
 
     @GetMapping("/{accountId}")
-    public List<TransactionResponseDTO> extract(@PathVariable Long accountId) {
-        return service.extract(accountId).stream().map(mapper::toResponse).collect(Collectors.toList());
+    public PageResponseDTO<TransactionResponseDTO> extract(
+            @PathVariable Long accountId,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "5") int size
+    ) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("timestamp").descending());
+        Page<Transaction> result = service.extract(accountId, pageable);
+
+        return new PageResponseDTO<>(
+                result.stream().map(mapper::toResponse).toList(),
+                result.getNumber(),
+                result.getTotalPages(),
+                result.getTotalElements()
+        );
     }
 }
